RESOLVE: horizontal scrollbar fixed

--- a/src/Components/Semester/Semester.module.scss
+++ b/src/Components/Semester/Semester.module.scss
@@ -201,7 +201,7 @@
       margin: auto;
       margin-top: 3.8rem;
 
-      width: 80vw;
+      width: 80%;
       height: 68rem;
 
       .boxleft {
